# Jarvis-Personal-Assistant

./: .env  .gitignore  Dockerfile  README.md  agent.py  app.py  contacts.json  local_agent_webhook.py  main.py  pyproject.toml  service_account.json  setup_gmail_pubsub.py  token.pickle  token.pickle.b64
agent/: ELEVEN_LABS_TEST.Py  app.py  config.py  contacts.json  conversation_manager.py  credentials_oauth.json  email_processor.py  entrypoint.sh  main.py  requirements.txt  system_config.py  tool_executor.py
agent/tools/: calendar_tools.py  oauth_integration.py  process_new_emails_tools.py
frontend/: package-lock.json  package.json
tools/: calendar_tools.py  gmail_watch_tools.py  mail_tools.py  oauth_integration.py  todos_tools.py
