[project]
name = "stakpak-hackathon-day"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-auth>=2.40.1",
    "google>=3.0.0",
    "openai>=1.78.0",
    "requests>=2.32.3",
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.169.0",
    "sendgrid>=6.12.0",
    "python-dotenv>=1.1.0",
    "langfuse>=2.60.4",
]
